Fikser ux-bugs i tidslinja
- Filtrerer vekk duplikate intervaller.
- Legger på riktig :hover- og :focus-styling.
- Bruker z-index for at intervallene (blå bokser) skal overlappe tidslinjestrekene (de grå som ligger bak periodene).
- Legger intervallene bak periodene slik at fargene på periodene blir riktig, og tar samtidig vekk mix-blend-mode fra intervallene som nå er unødvendig.

--- a/packages/tidslinje/components/Datointervaller.less
+++ b/packages/tidslinje/components/Datointervaller.less
@@ -7,7 +7,6 @@
   height: 100%;
   border: none;
   background: none;
-  mix-blend-mode: multiply;
   padding: 0;
 
   &::-moz-focus-inner {
@@ -16,7 +15,6 @@
 
   &:hover,
   &:focus {
-    background: @colorHover;
     outline: none;
   }
 }
@@ -24,30 +22,30 @@
 .aktivtDatointervall {
   composes: datoinvervall;
   background: @colorActive;
+  z-index: 100;
   box-shadow:
-          0.5px 0 0 0 @navBla,
-          -0.5px 0 0 0 @navBla,
-          inset 0.5px 0 0 0 @navBla,
-          inset -0.5px 0 0 0 @navBla;
+          inset 2px 0 0 -1px @navBla,
+          inset -2px 0 0 -1px @navBla;
 
   .dot() {
     content: '';
     position: absolute;
-    top: -3px;
-    width: 6px;
-    height: 6px;
+    top: -2px;
+    width: 3px;
+    height: 3px;
     border-radius: 50%;
     background: @navBla;
+    box-shadow: 0 0 0 1px @navBla;
   }
 
   &:before {
     .dot();
-    left: -3px;
+    left: -1px;
   }
 
   &:after {
     .dot();
-    right: -3px;
+    right: -1px;
   }
 }
 
