--- a/packages/tidslinje/components/Tidslinjerad.less
+++ b/packages/tidslinje/components/Tidslinjerad.less
@@ -1,11 +1,3 @@
-.colors(@background, @border, @hover) {
-  background: @background;
-  border: 1px solid @border;
-  &:hover {
-    background: @hover;
-  }
-}
-
 .rad {
   display: flex;
   margin: 0.25rem 0;
@@ -39,6 +31,14 @@
   }
 }
 
+.colors(@background, @border, @hover) {
+  background: @background;
+  border: 1px solid @border;
+  &:hover, &.active {
+    background: @hover;
+  }
+}
+
 .periode {
   .colors(#e7e9e9, #59514b, #c3c3c3);
   height: 1.5rem;
@@ -47,12 +47,12 @@
   position: absolute;
   cursor: pointer;
   border: 1px dashed #59514b;
-  isolation: isolate;
+  z-index: 1000;
 
   &:active,
   &:focus {
     outline: none;
-    box-shadow: 0 0 0 3px #0067c5;
+    box-shadow: none;
   }
 
   &:before {
@@ -104,7 +104,7 @@
 }
 
 .ingenUtbetaling:before {
-  background-image: url("data:image/svg+xml,%3Csvg width='16px' height='15px' viewBox='0 0 16 15' version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'%3E%3C!-- Generator: Sketch 63.1 (92452) - https://sketch.com --%3E%3Ctitle%3Evarsel%3C/title%3E%3Cdesc%3ECreated with Sketch.%3C/desc%3E%3Cg id='varsel' stroke='none' stroke-width='1' fill='none' fill-rule='evenodd'%3E%3Cg id='Group-25' transform='translate(1.000000, 0.500000)'%3E%3Cg id='Group-11'%3E%3Cpath d='M7.11929186,7.99360578e-15 L6.99450637,0.00121741942 C5.11968047,0.0340877437 3.35503102,0.791931331 2.02621773,2.13535366 C0.687665079,3.48851534 -0.0312210874,5.25986059 0.0010405272,7.12372972 C0.0679985952,10.9811231 3.0902423,14.0027581 6.88128637,14.0027581 L7.00485444,14.0015407 C10.9285972,13.9339739 14.0664958,10.738248 13.998929,6.87963713 C13.9319709,3.0222437 10.9097272,7.99360578e-15 7.11929186,7.99360578e-15 Z' id='Shape' fill='%233E3832' fill-rule='nonzero'%3E%3C/path%3E%3Cg id='Group' transform='translate(6.000000, 2.500000)' fill='%23FFFFFF'%3E%3Cpath d='M1.06053179,8.63877304 C1.05428214,8.63877304 1.04803248,8.63877304 1.04178283,8.63877304 C0.474106066,8.63877304 0.00954856614,8.18463163 0.000174087446,7.61591326 C-0.010242,7.04094523 0.448065847,6.56597164 1.02303387,6.55659716 C1.02928353,6.55659716 1.03553318,6.55555556 1.04178283,6.55555556 C1.6094596,6.55555556 2.07297549,7.01073858 2.08339157,7.57945695 C2.09380766,8.15442498 1.63445821,8.62835695 1.06053179,8.63877304 Z' id='Path'%3E%3C/path%3E%3Cpath d='M1.04166667,0.166666667 C1.42519774,0.166666667 1.73611111,0.415397361 1.73611111,0.722222222 L1.73611111,4.61111111 C1.73611111,4.91793597 1.42519774,5.16666667 1.04166667,5.16666667 C0.65813559,5.16666667 0.347222222,4.91793597 0.347222222,4.61111111 L0.347222222,0.722222222 C0.347222222,0.415397361 0.65813559,0.166666667 1.04166667,0.166666667 Z' id='Rectangle' fill-rule='nonzero'%3E%3C/path%3E%3C/g%3E%3C/g%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+  background-image: url("data:image/svg+xml,%3Csvg width='16px' height='15px' viewBox='0 0 16 15' version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'%3E%3C!-- Generator: Sketch 63.1 (92452) - https://sketch.com --%3E%3Ctitle%3Eok%3C/title%3E%3Cdesc%3ECreated with Sketch.%3C/desc%3E%3Cg id='ok' stroke='none' stroke-width='1' fill='none' fill-rule='evenodd'%3E%3Cg id='Group-24' transform='translate(1.000000, 0.500000)'%3E%3Cg id='Group-7'%3E%3Cg id='Group-10'%3E%3Ccircle id='Oval' fill='%233E3832' cx='7' cy='7' r='7'%3E%3C/circle%3E%3Cpath d='M5.53173669,8.56558706 L10.3717599,4.1906743 C10.6656227,3.92446306 11.1277,3.93844878 11.4031459,4.22358063 C11.6787247,4.50885013 11.6629451,4.95643147 11.3685003,5.22326125 L6.01173091,10.0656476 C5.87535578,10.1881019 5.69752862,10.2545455 5.51494426,10.2545455 C5.32315108,10.2545455 5.13877405,10.1821492 4.99872552,10.0478833 L3.21355231,8.31886219 C2.9288159,8.04308208 2.9288159,7.59537147 3.21355231,7.31959136 C3.49828873,7.04381125 3.9605393,7.04381125 4.24527571,7.31959136 L5.53173669,8.56558706 Z' id='Path' fill='%23FFFFFF' fill-rule='nonzero'%3E%3C/path%3E%3C/g%3E%3C/g%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
 }
 
 .oppgaver {
@@ -115,18 +115,20 @@
   @borderColor: #ba3a26;
   .colors(#f1d8d4, #ba3a26, #e3b0a8);
   background: repeating-linear-gradient(110deg, @borderColor, @borderColor 1px, #f1d8d4 1px, #f1d8d4 7px);
+  &:hover, &.active {
+    background: repeating-linear-gradient(110deg, @borderColor, @borderColor 1px, #e3b0a8 1px, #e3b0a8 7px);
+  }
 }
 
-.venter {
+.venter, .ingenUtbetaling {
   .colors(#e7e9e9, #78706a, #c3c3c3);
+  &:hover, &.active {
+    background: #e7e9e9;
+  }
 }
 
 .tilUtbetaling, .utbetalt {
   .colors(#cde7d8, #117938, #9bd0b0);
-}
-
-.ingenUtbetaling {
-  .colors(#e0f5fb, #66cbec, #9fcdda);
 }
 
 .sammenhengendeFraHøyre {
